# sagemaker-defect-detection

./: .gitattributes  .gitignore  .viperlightignore  404.html  README.md  THIRD_PARTY  buildspec.yaml  index.html  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: questions-or-general-feedbacks.md
.github/workflows/: ci.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
cloudformation/: defect-detection-permissions.yaml  defect-detection-sagemaker-notebook-instance.yaml  defect-detection.yaml
cloudformation/solution-assistant/: solution-assistant.yaml
cloudformation/solution-assistant/src/: lambda_fn.py
notebooks/: 0_demo.ipynb  1_retrain_from_checkpoint.ipynb  2_detection_from_scratch.ipynb  3_classification_from_scratch.ipynb  4_finetune.ipynb
reference/neu/: index.html
reference/sagemaker_defect_detection/: index.html
reference/sagemaker_defect_detection/classifier/: index.html
reference/sagemaker_defect_detection/dataset/: index.html
reference/sagemaker_defect_detection/detector/: index.html
reference/sagemaker_defect_detection/models/: index.html
reference/sagemaker_defect_detection/transforms/: index.html
scripts/: build.sh  find_best_ckpt.py  train_classifier.sh  train_detector.sh
search/: search_index.json
src/: prepare_RecordIO.py  utils.py  xml2json.py
src/prepare_data/: neu.py  test_neu.py
src/sagemaker_defect_detection/: __init__.py  classifier.py  detector.py  transforms.py
src/sagemaker_defect_detection/dataset/: neu.py
test/: solution-parameters.json
(+11 files in other folders)
