[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | build
    | dist
  )
)
'''

[tool.portray]
moduels = ["sagemaker-defect-detection"]
docs_dir = "docs"

[tool.portray.mkdocs.theme]
favicon = "docs/sagemaker.png"
logo = "docs/sagemaker.png"
name = "material"
palette = {primary = "dark blue"}
