[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | build
    | dist
  )
)
'''

[tool.portray]
modules = ["src/sagemaker_defect_detection", "src/prepare_data/neu.py"]
docs_dir = "docs"

[tool.portray.mkdocs.theme]
favicon = "docs/sagemaker.png"
logo = "docs/sagemaker.png"
name = "material"
palette = {primary = "dark blue"}
